hls-distribution-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hls-distribution-service-routes
spec:
  parentRefs:
  - name: my-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /live/
      method: GET
    - path:
        type: PathPrefix
        value: /vod/
      method: GET
    backendRefs:
    - name: hls-distribution-service
      port: 8000
